--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-radio-buttons-group": "^1.0.7"
   },
   "devDependencies": {
