--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-material-ui": "^1.30.1",
     "react-native-radio-buttons-group": "^1.0.7"
   },
   "devDependencies": {
