--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
-    "firebase": "^5.8.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-radio-buttons-group": "^1.0.7",
-    "react-native-switch-selector": "^1.1.12"
+    "react-native-switch-selector": "^1.1.12",
+    "react-navigation": "^3.4.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
