--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-flash-message": "^0.1.11",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
-    "react-native-radio-buttons-group": "^1.0.7",
     "react-native-switch-selector": "^1.1.12",
+    "react-native-webview": "^5.4.1",
     "react-navigation": "^3.4.1"
   },
   "devDependencies": {
