--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-dropdown": "0.0.6",
     "react-native-flash-message": "^0.1.11",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
+    "react-native-modal-dropdown": "^0.6.2",
+    "react-native-radio-input": "^0.9.4",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-switch-selector": "^1.1.12",
+    "react-native-vector-icons": "^6.4.2",
     "react-native-webview": "^5.4.1",
     "react-navigation": "^3.4.1"
   },
